layout bug fixed

--- a/appointment.css
+++ b/appointment.css
@@ -443,7 +443,11 @@ p {
         padding: 1rem;
         margin-bottom: 1rem;
         border-radius: 10px;
+    }
 
+    .flexed {
+        display: flex;
+        flex-direction: column;
     }
 
 
